--- a/src/locales/translations_tr.json
+++ b/src/locales/translations_tr.json
@@ -15,9 +15,9 @@
   "privacy_h3_2_li2_span": "Affiliate",
   "privacy_h3_2_li2": "means an entity that controls, is controlled by or is under common control with a party, where \"control\" means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other managing authority.",
   "privacy_h3_2_li3_span": "Application",
-  "privacy_h3_2_li3": "refers to PasswOCD: Password Generator, the software program provided by the Company.",
+  "privacy_h3_2_li3": "refers to APP_NAME, the software program provided by the Company.",
   "privacy_h3_2_li4_span": "Company",
-  "privacy_h3_2_li4": "(referred to as either \"the Company\", \"We\", \"Us\" or \"Our\" in this Agreement) refers to PasswOCD: Password Generator.",
+  "privacy_h3_2_li4": "(referred to as either \"the Company\", \"We\", \"Us\" or \"Our\" in this Agreement) refers to APP_NAME.",
   "privacy_h3_2_li5_span": "Country",
   "privacy_h3_2_li5": ": This Privacy Policy applies to users worldwide. Users may be located anywhere in the world, and their information may be transferred to and processed in other countries where the data protection laws may differ than those from Your jurisdiction.",
   "privacy_h3_2_li6_span": "Device",
